# Globally_Aligned_Events

./: LICENSE  README.md
globally_aligned_events/event_bundler/: CMakeLists.txt  package.xml
globally_aligned_events/event_bundler/config/: config.yaml
globally_aligned_events/event_bundler/include/: EventBundler.h
globally_aligned_events/event_bundler/launch/: event_bundler.launch
globally_aligned_events/event_bundler/src/: EventBundler.cpp  main.cpp
globally_aligned_events/event_publisher/: CMakeLists.txt  package.xml
globally_aligned_events/event_publisher/config/: config.yaml
globally_aligned_events/event_publisher/include/: Event.h  IMU.h  Image.h
globally_aligned_events/event_publisher/launch/: event_publisher.launch
globally_aligned_events/event_publisher/src/: Event.cpp  IMU.cpp  Image.cpp  main.cpp
globally_aligned_events/rotation_estimator/: CMakeLists.txt  package.xml
globally_aligned_events/rotation_estimator/config/: config.yaml  config_ESIM.yaml
globally_aligned_events/rotation_estimator/include/: numerics.h
globally_aligned_events/rotation_estimator/include/utils/: Database.h  System.h  numerics.h
globally_aligned_events/rotation_estimator/launch/: rotation_estimation.launch  rotation_estimation_davis.launch
globally_aligned_events/rotation_estimator/src/: main.cpp
globally_aligned_events/rotation_estimator/src/utils/: Database.cpp  Estimator.cpp  System.cpp  Undistortion.cpp  numerics.cpp
