<?xml version="1.0"?>
<package format="2">
  <name>rotation_estimator</name>
  <version>0.0.0</version>
  <description>The rotation_estimator package</description>

  <author email="rlgkfka614@gmail.com">haram</author>
  <maintainer email="rlgkfka614@gmail.com">haram</maintainer>
  <license>MIT</license>
  <url type="website">http://haram-kim.github.io</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>

</package>
